<?xml version="1.0"?>
<package format="2">
  <name>ros_robotic_skin</name>
  <version>0.0.1</version>
  <description>The ros_robotic_skin package</description>

  <maintainer email="kandai.wata@gmail.com">Kandai Watanabe</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>imu_filter_madgwick</build_depend>
  <build_depend>franka_control</build_depend>
  <build_depend>rostest</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <build_export_depend>franka_control</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>xacro</exec_depend>

  <exec_depend>panda_moveit_config</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>franka_control</exec_depend>

  <depend>controller_interface</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>franka_hw</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>libfranka</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>

</package>
